<resources>
    <string name="app_name">Uidesign</string>
    <string name="Button">Login</string>
    <string name="TextForgot"><u>Forgot Your Password?</u></string>
    <string name="Textfacebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or_continue_with">Or Continue With</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="contentdescription">contentDescription</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="foodninja">FoodNinja</string>
    <string name="home">Home</string>
    <string name="_242_st_marks_eve_finland">242 ST Marks Eve, Finland</string>
    <string name="title_activity_bottom_navigaton">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>